--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,26 +16,27 @@ jobs:
       - name: 📥 Checkout repository
         uses: actions/checkout@v3
 
-      - name: 🔨 Setup Bun Runtime
-        uses: antongolub/action-setup-bun@v1
+      - name: 📸 Calculate commit hash
+        id: sha
+        uses: pr-mpt/actions-commit-hash@v2
+
+      - name: 🔨 Prepare Node environment
+        uses: actions/setup-node@v3
         with:
-          cache: true
-          cache-bin: true
+          node-version: 19
 
       - name: 🎉 Install project dependencies
-        run: bun i
+        run: yarn
 
       - name: 🚀 Deploy workers
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           secrets: |
-            HOST_URL
             CLIENT_ID
             CLIENT_SECRET
             TENANT_ID
         env:
-          HOST_URL: ${{ secrets.HOST_URL }}
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           TENANT_ID: ${{ secrets.TENANT_ID }}
