--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
     "project": ["./tsconfig.json"]
   },
   "rules": {
+    "@typescript-eslint/prefer-nullish-coalescing": 0,
+    "@typescript-eslint/strict-boolean-expressions": 0,
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "@typescript-eslint/no-floating-promises": ["warn"]
   }
