--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,12 @@ jobs:
             CLIENT_ID
             CLIENT_SECRET
             TENANT_ID
+            DRIVE_ID_PUBLIC
+            DRIVE_ID_PROTECTED
         env:
           ALLOW_HOST_LIST: ${{ secrets.ALLOW_HOST_LIST }}
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           TENANT_ID: ${{ secrets.TENANT_ID }}
+          DRIVE_ID_PUBLIC: ${{ secrets.DRIVE_ID_PUBLIC }}
+          DRIVE_ID_PROTECTED: ${{ secrets.DRIVE_ID_PROTECTED }}
