--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,22 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "standard-with-typescript",
-    "prettier"
-  ],
-  "overrides": [],
+  "extends": ["airbnb-base", "airbnb-typescript/base", "prettier"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./tsconfig.json"]
+    "project": "./tsconfig.json"
   },
   "rules": {
-    "@typescript-eslint/prefer-nullish-coalescing": 0,
-    "@typescript-eslint/strict-boolean-expressions": 0,
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-    "@typescript-eslint/no-floating-promises": ["warn"]
+    "import/prefer-default-export": "off"
   }
 }
