--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,21 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["airbnb-base", "airbnb-typescript/base", "prettier"],
+  "extends": [
+    "airbnb-base",
+    "airbnb-typescript/base",
+    "standard-with-typescript",
+    "prettier"
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
   "rules": {
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "no-underscore-dangle": "off",
+    "no-console": "off"
   }
 }
