--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,5 +3,5 @@ main = "src/index.ts"
 compatibility_date = "2023-06-28"
 
 kv_namespaces = [
-  { binding = "ASSETS_CENTER_ACCESS_DATA", id = "d6af6e43f8d241658d0017d8b3db9cd4", preview_id = "36739cdcc46c47d99f6c6e59d517cf48" },
+  { binding = "SHAREPOINT_ACCESS_TOKEN", id = "2f3c4cb5f09b45978fa3861a495e3ea3", preview_id = "cc2d6af740254bf3846bb529f4e68e8b" },
 ]
