--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,16 +33,12 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           secrets: |
-            ALLOW_HOST_LIST
-            CLIENT_ID
-            CLIENT_SECRET
-            TENANT_ID
-            DRIVE_ID_PUBLIC
-            DRIVE_ID_PROTECTED
+            ASSETS_CLIENT_ID
+            ASSETS_CLIENT_SECRET
+            ASSETS_TENANT_ID
+            ASSETS_MANIFESTS
         env:
-          ALLOW_HOST_LIST: ${{ secrets.ALLOW_HOST_LIST }}
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-          TENANT_ID: ${{ secrets.TENANT_ID }}
-          DRIVE_ID_PUBLIC: ${{ secrets.DRIVE_ID_PUBLIC }}
-          DRIVE_ID_PROTECTED: ${{ secrets.DRIVE_ID_PROTECTED }}
+          ASSETS_CLIENT_ID: ${{ secrets.ASSETS_CLIENT_ID }}
+          ASSETS_CLIENT_SECRET: ${{ secrets.ASSETS_CLIENT_SECRET }}
+          ASSETS_TENANT_ID: ${{ secrets.ASSETS_TENANT_ID }}
+          ASSETS_MANIFESTS: ${{ secrets.ASSETS_MANIFESTS }}
