--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "format": "prettier --write ./src",
-    "deploy": "wrangler publish src/index.ts"
+    "deploy": "wrangler deploy src/index.ts"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.8",
