--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,6 @@ jobs:
           ASSETS_CLIENT_SECRET: ${{ secrets.ASSETS_CLIENT_SECRET }}
           ASSETS_TENANT_ID: ${{ secrets.ASSETS_TENANT_ID }}
           ASSETS_MANIFESTS: ${{ secrets.ASSETS_MANIFESTS }}
+          ANALYTICS_MEASUREMENT_ID: ${{ secrets.ANALYTICS_MEASUREMENT_ID }}
+          ANALYTICS_API_SECRET: ${{ secrets.ANALYTICS_API_SECRET }}
+          IS_PROD: true
