--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.8",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@types/jsonwebtoken": "^9.0.2",
     "axios": "^1.6.0",
     "crypto-js": "^4.2.0",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230904.0",
-    "@tsconfig/strictest": "^2.0.2",
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
