--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "import/prefer-default-export": "off",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "no-underscore-dangle": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
