--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,7 +1,24 @@
 ASSETS_CLIENT_ID = "xxxxxxxxxxxxxxxxx"
 ASSETS_CLIENT_SECRET = "xxxxxxxxxxxxxxxxx"
 ASSETS_TENANT_ID = "xxxxxxxxxxxxxxxxx"
-ASSETS_MANIFESTS = `
+ASSETS_DOWNLOAD_MANIFESTS = `
+{
+  "xxxxxxxxxxxxxxxxx": {
+    "driveId": "xxxxxxxxxxxxxxxxx",
+    "accessKey": "xxxxxxxxxxxxxxxxx",
+    "allowedHosts": ["xxxxxxxxxxxxxxxxx"],
+    "distPath": []
+  },
+  "xxxxxxxxxxxxxxxxx": {
+    "driveId": "xxxxxxxxxxxxxxxxx",
+    "accessKey": "xxxxxxxxxxxxxxxxx",
+    "allowedHosts": ["xxxxxxxxxxxxxxxxx"],
+    "distPath": []
+  },
+  // ...
+}
+`
+ASSETS_UPLOAD_MANIFESTS = `
 {
   "xxxxxxxxxxxxxxxxx": {
     "driveId": "xxxxxxxxxxxxxxxxx",
