--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@ jobs:
           ASSETS_CLIENT_ID: ${{ secrets.ASSETS_CLIENT_ID }}
           ASSETS_CLIENT_SECRET: ${{ secrets.ASSETS_CLIENT_SECRET }}
           ASSETS_TENANT_ID: ${{ secrets.ASSETS_TENANT_ID }}
-          ASSETS_MANIFESTS: ${{ secrets.ASSETS_MANIFESTS }}
+          ASSETS_DOWNLOAD_MANIFESTS: ${{ secrets.ASSETS_DOWNLOAD_MANIFESTS }}
+          ASSETS_UPLOAD_MANIFESTS: ${{ secrets.ASSETS_UPLOAD_MANIFESTS }}
           ANALYTICS_MEASUREMENT_ID: ${{ secrets.ANALYTICS_MEASUREMENT_ID }}
           ANALYTICS_API_SECRET: ${{ secrets.ANALYTICS_API_SECRET }}
           IS_PROD: true
